Update color scheme

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -71,7 +71,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">{{ title }}</h1>
                         <p class="intro-text">Please share this moment with us.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#details" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
