--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -85,8 +85,11 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Details</h2>
+                <p>You are invited to our wedding on May 28, 2016</p>
                 <p>St. Bartholomew's Episcopal Church</p>
-                <p>LaVista Rd, Atlanta, GA</p>
+                <p>1790 LaVista Rd NE, Atlanta, GA 30329</p>
+                <p>WEDDING 3:00 PM</p>
+                <p>RECEPTION 6:00 PM</p>
             </div>
         </div>
     </section>
@@ -96,7 +99,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>RSVP</h2>
-                <p>RSVP captcha</p>
+                <p>Please let us know if you will be able to attend</p>
             </div>
         </div>
     </section>
@@ -106,7 +109,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Registry</h2>
-                <p>We are registered at the following locations</p>
+                <p>We are registered at the following stores</p>
+                <p>Amazon</p>
+                <p>Bed Bath &amp; Beyond</p>
             </div>
         </div>
     </section>
