--- a/wsgi/static/css/grayscale.css
+++ b/wsgi/static/css/grayscale.css
@@ -252,11 +252,11 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
+.rsvp-section {
     width: 100%;
     padding: 50px 0;
     color: #000;
-    background: url(../images/ngozi-adonis.jpg) no-repeat center center scroll;
+    background: url(../images/ngozi-adonis-1.jpg) no-repeat center center scroll;
     background-color: #fff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
