Change fa color

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -72,7 +72,7 @@
                         <h1 class="brand-heading">{{ title }}</h1>
                         <p class="intro-text">Please share this moment with us.</p>
                         <a href="#details" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
+                            <i class="fa fa-angle-double-down fa-inverse animated"></i>
                         </a>
                     </div>
                 </div>
