--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -95,7 +95,7 @@
     </section>
 
     <!-- RSVP Section -->
-    <section id="rsvp" class="container content-section text-center">
+    <section id="rsvp" class="container content-section text-center rsvp-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>RSVP</h2>
