--- a/wsgi/static/css/grayscale.css
+++ b/wsgi/static/css/grayscale.css
@@ -7,9 +7,9 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #000;
-    background-color: #fff;
+    font-family: 'Lora',"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #111;
+    background-color: #ddd;
 }
 
 html {
@@ -24,10 +24,10 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Tangerine',"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    text-shadow: 8px 8px 8px #aaa;
 }
 
 p {
@@ -36,7 +36,7 @@ p {
     line-height: 1.5;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
@@ -45,7 +45,7 @@ p {
 }
 
 a {
-    color: #219ab3;
+    color: #42dca3;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #29cce8;
+    color: #1d9b6c;
 }
 
 .light {
@@ -63,10 +63,10 @@ a:focus {
 
 .navbar-custom {
     margin-bottom: 0;
-    border-bottom: 1px solid rgba(21, 21, 21, 0.67);
+    border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #fff;
+    background-color: #ddd;
 }
 
 .navbar-custom .navbar-brand {
@@ -80,7 +80,7 @@ a:focus {
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #000;
+    color: #111;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
@@ -89,12 +89,7 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #000;
-}
-
-.navbar-custom .nav li.active {
-    outline: nonte;
-    background-color: rgba(10,10,10,.3);
+    color: #111;
 }
 
 .navbar-custom .nav li a {
@@ -103,15 +98,37 @@ a:focus {
     transition: background .3s ease-in-out;
 }
 
-.navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li a.active {
+.navbar-custom .nav li a:hover {
     outline: 0;
-    background-color: rgba(10,10,10,.3);
+    color: rgba(255,255,255,.8);
+    background-color: transparent;
 }
 
-@media(min-width:767px) {
-    .navbar {
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li a:active {
+    outline: 0;
+    background-color: transparent;
+}
+
+.navbar-custom .nav li.active {
+    outline: 0;
+}
+
+.navbar-custom .nav li.active a {
+    background-color: rgba(255,255,255,.3);
+}
+
+.navbar-custom .nav li.active a:hover {
+    color: #111;
+}
+
+.muted {
+    font-size: 12px;
+    color: #aaa;
+}
+
+@media(min-width:768px) {
+    .navbar-custom {
         padding: 20px 0;
         border-bottom: 0;
         letter-spacing: 1px;
@@ -121,13 +138,10 @@ a:focus {
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
 
-    .top-nav-collapse {
-        padding: 0;
-        background-color: #fff;
-    }
-
     .navbar-custom.top-nav-collapse {
-        border-bottom: 1px solid rgba(10,10,10,.3);
+        padding: 0;
+        border-bottom: 1px solid rgba(255,255,255,.3);
+        background: #ddd;
     }
 }
 
@@ -137,9 +151,9 @@ a:focus {
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #000;
+    color: #111;
     background: url(../images/ngozi-adonis.jpg) no-repeat bottom center scroll;
-    background-color: #fff;
+    background-color: #ddd;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -155,11 +169,15 @@ a:focus {
     font-size: 40px;
 }
 
+.section-heading {
+    font-size: 36px;
+}
+
 .intro .intro-body .intro-text {
     font-size: 18px;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     .intro {
         height: 100%;
         padding: 0;
@@ -169,8 +187,12 @@ a:focus {
         font-size: 100px;
     }
 
+    .section-heading {
+        font-size: 90px;
+    }
+
     .intro .intro-body .intro-text {
-        font-size: 25px;
+        font-size: 26px;
     }
 }
 
@@ -179,10 +201,10 @@ a:focus {
     height: 70px;
     margin-top: 15px;
     padding: 7px 16px;
-    border: 2px solid #000;
-    border-radius: 35px;
+    border: 2px solid #111;
+    border-radius: 100%!important;
     font-size: 40px;
-    color: #000;
+    color: #111;
     background: 0 0;
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
@@ -192,8 +214,8 @@ a:focus {
 .btn-circle:hover,
 .btn-circle:focus {
     outline: 0;
-    color: #000;
-    background: rgba(10,10,10,.1);
+    color: #111;
+    background: rgba(255,255,255,.1);
 }
 
 .btn-circle i.animated {
@@ -215,7 +237,7 @@ a:focus {
 }
 
 @-webkit-keyframes pulse {    
-    0 {
+    0% {
         -webkit-transform: scale(1);
         transform: scale(1);
     }
@@ -232,7 +254,7 @@ a:focus {
 }
 
 @-moz-keyframes pulse {    
-    0 {
+    0% {
         -moz-transform: scale(1);
         transform: scale(1);
     }
@@ -252,12 +274,13 @@ a:focus {
     padding-top: 100px;
 }
 
-.rsvp-section {
+.picture-section {
     width: 100%;
     padding: 50px 0;
-    color: #000;
+    color: #eee;
     background: url(../images/ngozi-adonis-1.jpg) no-repeat center center scroll;
-    background-color: #fff;
+    background-color: #111;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -272,7 +295,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 175px;
     }
 
     .download-section {
@@ -286,6 +309,7 @@ a:focus {
 }
 
 .btn {
+    border-radius: 0;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
@@ -295,17 +319,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #219ab3;
-    color: #219ab3;
+    border: 1px solid #42dca3;
+    color: #42dca3;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #219ab3;
+    border: 1px solid #42dca3;
     outline: 0;
-    color: #fff;
-    background-color: #219ab3;
+    color: #ddd;
+    background-color: #42dca3;
 }
 
 ul.banner-social-buttons {
@@ -341,13 +365,13 @@ footer p {
 ::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(10,10,10,.2);
+    background: rgba(255,255,255,.2);
 }
 
 ::selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(10,10,10,.2);
+    background: rgba(255,255,255,.2);
 }
 
 img::selection {
@@ -359,5 +383,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: rgba(10,10,10,.2);
+    webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
