miscellaneous formatting updates

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -89,29 +89,34 @@
         </div>
     </header>
 
-    <!-- About Section -->
+    <!-- Detail Section -->
     <section id="details" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="section-heading">Details</h2>
-                <p>You are invited to our wedding on May 28, 2016</p>
-                <p>St. Bartholomew's Episcopal Church</p>
-                <p>1790 LaVista Rd NE, Atlanta, GA 30329 <a href="#map" class="page-scroll"> <i class="fa fa-map-o animated"></i></a></p>
-                <p>WEDDING 3:00 PM</p>
-                <p>RECEPTION 6:00 PM</p>
+                <div class="panel-background">
+                    <h2 class="section-heading">Details</h2>
+                    <p>You are invited to our wedding on</p>
+                    <p>May 28, 2016</p>
+                    <p>St. Bartholomew's Episcopal Church<br>
+                    1790 LaVista Rd NE, Atlanta, GA 30329 <a href="#map" class="page-scroll"> <i class="fa fa-map-o animated"></i></a></p>
+                    <p>CEREMONY 3:00 PM<br>
+                    RECEPTION 5:00 PM</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- RSVP Section -->
     <section id="rsvp" class="content-section text-center">
         <div class="picture-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2 class="section-heading">RSVP</h2>
-                    <p>Please let us know if you will be able to attend.</p>
-                    <p>Bootstrap Form</p>
-                    <p>ReCAPTCHA</p>
+                    <div class="panel-transparent">
+                        <h2 class="section-heading">RSVP</h2>
+                        <p>Please let us know if you will be able to attend.</p>
+                        <p>Bootstrap Form</p>
+                        <p>ReCAPTCHA</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -121,16 +126,18 @@
     <section id="registry" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="section-heading">Registry</h2>
-                <p>We are registered at the following stores.</p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://www.amazon.com" class="btn btn-default btn-lg"><i class="fa fa-amazon fa-fw"></i> <span class="network-name">Amazon</span></a>
-                    </li>
-                    <li>
-                        <a href="http://www.bedbathbeyond.com" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Bed, Bath &amp; Beyond</span></a>
-                    </li>
-                </ul>
+                <div class="panel-background">
+                    <h2 class="section-heading">Registry</h2>
+                    <p>We are registered at the following stores:</p>
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="https://www.amazon.com" class="btn btn-default btn-lg"><i class="fa fa-amazon fa-fw"></i> <span class="network-name">Amazon</span></a>
+                        </li>
+                        <li>
+                            <a href="http://www.bedbathbeyond.com" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Bed, Bath &amp; Beyond</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
