--- a/wsgi/static/css/grayscale.css
+++ b/wsgi/static/css/grayscale.css
@@ -31,14 +31,14 @@ h6 {
 }
 
 p {
-    margin: 0 0 25px;
+    margin: 0 0 3px;
     font-size: 18px;
     line-height: 1.5;
 }
 
 @media(min-width:768px) {
     p {
-        margin: 0 0 35px;
+        margin: 0 0 5px;
         font-size: 20px;
         line-height: 1.6;
     }
@@ -287,6 +287,16 @@ a:focus {
     -o-background-size: cover;
 }
 
+.panel-background {
+    width: 100%;
+    background-color: #fff;
+}
+
+.panel-transparent {
+    width: 100%;
+    background: rgba(255,255,255,0.5);
+}
+
 #map {
     width: 100%;
     height: 200px;
@@ -333,12 +343,12 @@ a:focus {
 }
 
 ul.banner-social-buttons {
-    margin-top: 0;
+    margin-top: 20px;
 }
 
 @media(max-width:1199px) {
     ul.banner-social-buttons {
-        margin-top: 15px;
+        margin-top: 30px;
     }
 }
 
