Resize panel borders

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -92,7 +92,7 @@
     <!-- Detail Section -->
     <section id="details" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-6 col-lg-offset-3">
                 <div class="panel-background">
                     <h2 class="section-heading">Details</h2>
                     <p>You are invited to our wedding on</p>
@@ -110,8 +110,8 @@
     <section id="rsvp" class="content-section text-center">
         <div class="picture-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="panel-transparent">
+                <div class="col-lg-6 col-lg-offset-3">
+                    <div class="panel-background panel-transparent">
                         <h2 class="section-heading">RSVP</h2>
                         <p>Please let us know if you will be able to attend.</p>
                         <p>Bootstrap Form</p>
@@ -125,7 +125,7 @@
     <!-- Contact Section -->
     <section id="registry" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-6 col-lg-offset-3">
                 <div class="panel-background">
                     <h2 class="section-heading">Registry</h2>
                     <p>We are registered at the following stores:</p>
