--- a/wsgi/static/css/grayscale.css
+++ b/wsgi/static/css/grayscale.css
@@ -290,10 +290,14 @@ a:focus {
 .panel-background {
     width: 100%;
     background-color: #fff;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    border-width: 5px;
+    border-style: double;
+    border-color: #bbb;
 }
 
 .panel-transparent {
-    width: 100%;
     background: rgba(255,255,255,0.5);
 }
 
