Update images and layouts

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -31,6 +31,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="{% static 'images/rose.png' %}" />
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -79,8 +81,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"><strong>Ngozi</strong><br>and<br><strong>Adonis</strong></h1>
-                        <p class="intro-text">Please share this moment with us.</p>
+                        <h1 class="brand-heading"><strong>Ngozi Okafor</strong><br>and<br><strong>Adonis Bovell</strong></h1>
+                        <p class="intro-text heading-text">Share this moment with us.</p>
                         <a href="#details" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -112,11 +114,14 @@
         <div class="picture-section">
             <div class="container">
                 <div class="col-lg-6 col-lg-offset-3">
-                    <div class="panel-background panel-transparent">
+                    <div class="panel-background panel-transparent panel-spacer">
                         <h2 class="section-heading">RSVP</h2>
                         <p>Please let us know if you will be able to attend.</p>
-                        <p>Bootstrap Form</p>
-                        <p>ReCAPTCHA</p>
+                        <ul class="list-inline banner-social-buttons">
+                            <li>
+                                <a href="#rsvp" class="btn btn-default btn-lg"><span class="network-name">RSVP</span></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
