* Update bg images * Change registry link

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -140,7 +140,7 @@
                             <a href="https://www.amazon.com" class="btn btn-default btn-lg"><i class="fa fa-amazon fa-fw"></i> <span class="network-name">Amazon</span></a>
                         </li>
                         <li>
-                            <a href="http://www.bedbathbeyond.com" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Bed, Bath &amp; Beyond</span></a>
+                            <a href="http://www.macys.com" class="btn btn-default btn-lg"><i class="fa fa-star fa-fw"></i> <span class="network-name">MACY'S</span></a>
                         </li>
                     </ul>
                 </div>
