--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -173,6 +173,8 @@
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'js/grayscale.js' %}"></script>
 
+    <!-- api JavaScript -->
+    <script src="{% static 'js/api.js' %}"></script>
 </body>
 
 </html>
