--- a/wsgi/ngozi/templates/ngozi/modal.html
+++ b/wsgi/ngozi/templates/ngozi/modal.html
@@ -4,24 +4,11 @@
     <div class="modal-content">
       <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="modalLabel">RSVP</h4>
+        <h3 class="modal-title" id="modalLabel">RSVP</h3>
       </div>
       <div class="modal-body">
-        <p id="rsvp-form-invitation">Please let us know if you will be able to attend.</p>
-        <form id="rsvp-form" class="form-horizontal" action="#rsvp-form" method="post">
-            {% csrf_token %}
-            {{ rsvp_form }}
-            <div class="form-group">
-              <div class="modal-footer">
-                <button type="button"
-                        class="btn btn-success"
-                        value="rsvp"
-                        onclick="submit_rsvp(arguments[0] || window.event, '{% url 'rsvp' %}')">RSVP
-                </button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-        </form>
+        <p id="rsvp-form-invitation">Please let us know if you will be able to attend.<br></p>
+        {% include 'ngozi/form.html' %}
       </div>
     </div>
   </div>
