Update registry links

--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -104,8 +104,8 @@
                     <p>cordially invite you to the marriage of our children</p>
                     <p>Ngozi and Adonis</p>
                     <p>May 28, 2016</p>
-                    <p>St. Bartholomew's Episcopal Church<br>
-                    1790 LaVista Rd NE, Atlanta, GA 30329 <a href="#map" class="page-scroll"> <i class="fa fa-map-o animated"></i></a></p>
+                    <address>St. Bartholomew's Episcopal Church<br>
+                    1790 LaVista Rd NE, Atlanta, GA 30329 <a href="#map" class="page-scroll"> <i class="fa fa-map-o animated"></i></a></address>
                     <p>CEREMONY 3:00 PM<br>
                     RECEPTION 5:00 PM</p>
                 </div>
@@ -143,10 +143,10 @@
                     <p>We are registered at the following stores:</p>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://www.amazon.com" class="btn btn-default btn-lg"><i class="fa fa-amazon fa-fw"></i> <span class="network-name">Amazon</span></a>
+                            <a href="https://www.amazon.com/gp/registry/wedding/3TB0LIY9WQB7X" class="btn btn-default btn-lg"><i class="fa fa-amazon fa-fw"></i> <span class="network-name">Amazon</span></a>
                         </li>
                         <li>
-                            <a href="http://www.macys.com" class="btn btn-default btn-lg"><i class="fa fa-star fa-fw"></i> <span class="network-name">MACY'S</span></a>
+                            <a href="http://www1.macys.com/registry/wedding/guest/?registryId=6539892" class="btn btn-default btn-lg"><i class="fa fa-star fa-fw"></i> <span class="network-name">MACY'S</span></a>
                         </li>
                     </ul>
                 </div>
