--- a/wsgi/static/css/grayscale.css
+++ b/wsgi/static/css/grayscale.css
@@ -37,11 +37,19 @@ p {
     line-height: 1.5;
 }
 
+.name {
+    font-size: 28px;
+}
+
 @media(min-width:768px) {
     p {
         margin: 0 0 5px;
         font-size: 20px;
         line-height: 1.6;
+    }
+
+    .name {
+        font-size: 32px;
     }
 }
 
@@ -426,3 +434,4 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
