--- a/wsgi/ngozi/templates/ngozi/index.html
+++ b/wsgi/ngozi/templates/ngozi/index.html
@@ -17,6 +17,9 @@
     <!-- RSVP Section -->
     {% include 'ngozi/panels/rsvp.html' %}
 
+    <!-- Hotel Section -->
+    {% include 'ngozi/panels/hotel.html' %}
+
     <!-- Registry Section -->
     {% include 'ngozi/panels/registry.html' %}
 
