--- a/wsgi/ngozi/templates/ngozi/navigation.html
+++ b/wsgi/ngozi/templates/ngozi/navigation.html
@@ -23,6 +23,9 @@
                         <a class="page-scroll" href="#rsvp"><i class="fa fa-envelope fa-fw"></i> RSVP</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#hotels"><i class="fa fa-map-marker fa-fw"></i> Hotels</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#registry"><i class="fa fa-shopping-bag fa-fw"></i> Registry</a>
                     </li>
                     <li>
