--- a/wsgi/ngozi/templates/ngozi/panels/hotel.html
+++ b/wsgi/ngozi/templates/ngozi/panels/hotel.html
@@ -2,8 +2,8 @@
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3">
                 <div class="panel-background">
-                    <h2 class="section-heading">Accomodations</h2>
-                    <p>Local accomodations are available through</p>
+                    <h2 class="section-heading">Accommodations</h2>
+                    <p>Local accommodations are available through</p>
                     <p><address>SpringHill Suites Atlanta Buckhead<br>
                     3459 Buckhead Loop NE, Atlanta, GA 30326</address></p>
                     <p>Please make reservations before<br>
