Add rsvp by date

--- a/wsgi/ngozi/templates/ngozi/panels/rsvp.html
+++ b/wsgi/ngozi/templates/ngozi/panels/rsvp.html
@@ -5,7 +5,7 @@
                     <div class="panel-background panel-transparent panel-spacer">
                         <div id="rsvp-div">
                             <h2 class="section-heading">RSVP</h2>
-                            <p>Please let us know if you will be able to attend.</p>
+                            <p>Please let us know by April 17th, 2016 if you will be able to attend.</p>
                             <ul class="list-inline banner-social-buttons">
                                 <li>
                                     <a onclick="display_rsvp_modal()" class="btn btn-default btn-lg"><span class="network-name">RSVP</span></a>
